--- a/css/estilos.css
+++ b/css/estilos.css
@@ -8,13 +8,21 @@ html {
 }
 
 .contenedor-header {
-	height: 100px;
-	display: flex;
+	display: grid;
+	grid-template-columns: 2fr;
+	grid-template-rows: 1fr;
+	height:100%;
 	align-items: center;
 }
 
+
 header {
 	background-color: rgb(202, 202, 0);
+}
+
+nav {
+	display: flex;
+	justify-content: center;
 }
 
 .logo {
@@ -22,8 +30,18 @@ header {
 	max-width: 12rem;
 }
 
+header h2 {
+	font-style: oblique;
+	font-size: 150%;
+	text-align: center;
+	font-weight: 2px;
+	margin: 10px;
+	margin-left: 20px;
+}
+
 body {
-	background-color:rgb(255, 255, 99);
+	background-color:rgb(255, 255, 177);
+	background-image:url("../imagen/img-fondo.png");
 }
 
 menu {
@@ -37,7 +55,6 @@ menu h2{
 .contenedor-footer{
 	height: 50px;
 	display: flex;
-	align-items: center;
 }
 
 footer div{
@@ -57,13 +74,6 @@ footer {
 	background-color: rgb(202, 202, 0);
 }
 
-
-
-nav {
-	justify-content: right;
-	width: calc(80% - 1rem);
-	margin-right: 1rem;
-}
 
 ul {
 	list-style-type: none;
@@ -101,6 +111,11 @@ p {
 	text-align: left;
 	margin: 10px;
 	margin-left: 20px;
+}
+
+/*seccion inicio*/
+.mapa{
+	padding: 2rem;
 }
 
 /*seccion nosotros*/
