--- a/css/estilos.css
+++ b/css/estilos.css
@@ -7,19 +7,24 @@ html {
 	font-size: 62, 5%;
 }
 
-.contenedor-header {
-	display: grid;
-	grid-template-columns: 2fr;
-	grid-template-rows: 1fr;
+.contenedor-headerIndex {
 	height:100%;
-	align-items: center;
+	background-image:url("../imagenes/img-fondo.png");
+	background-repeat: no-repeat;
+	background-position-x: right;
 }
+
+
 
 
 header {
 	background-color: rgb(202, 202, 0);
 }
+.img{
 
+	opacity: 0.3;
+
+}
 nav {
 	display: flex;
 	justify-content: center;
@@ -34,14 +39,12 @@ header h2 {
 	font-style: oblique;
 	font-size: 150%;
 	text-align: center;
-	font-weight: 2px;
 	margin: 10px;
 	margin-left: 20px;
 }
 
 body {
 	background-color:rgb(255, 255, 177);
-	background-image:url("../imagen/img-fondo.png");
 }
 
 menu {
@@ -82,6 +85,7 @@ ul {
 	flex-wrap: wrap;
 	flex-direction: row;
 	justify-content: flex-end;
+	text-decoration: black;
 }
 
 
@@ -116,6 +120,10 @@ p {
 /*seccion inicio*/
 .mapa{
 	padding: 2rem;
+}
+
+.Servicios{
+	background-color: aliceblue;
 }
 
 /*seccion nosotros*/
