--- a/css/estilos.css
+++ b/css/estilos.css
@@ -9,7 +9,7 @@ html {
 
 .contenedor-headerIndex {
 	height:100%;
-	background-image:url("../imagenes/img-fondo.png");
+	background-image: linear-gradient(rgba(206, 223, 236, 0.4),rgba(176, 189, 201, 0.4)) , url("../imagenes/img-fondo.png");
 	background-repeat: no-repeat;
 	background-position-x: right;
 }
@@ -18,7 +18,7 @@ html {
 	height: 100px;
 	display: flex;
 	align-items: center;
-	justify-content: end;
+	justify-content: space-between;
 }
 
 
@@ -59,11 +59,13 @@ menu h2{
 	margin: 2rem;
 }
 .contenedor-footer{
-	height: 50px;
 	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	
 }
 
-footer div{
+/*footer div{
 	flex-direction: row;
 	justify-content: flex-end;
 	align-items: center;
@@ -73,7 +75,7 @@ footer div{
 footer h2{
 	width:100%;
 	font-size: 20px;
-}
+}*/
 
 
 footer {
@@ -106,13 +108,18 @@ h1 {
 
 h2 {
 	font-style: oblique;
-	font-size: 150%;
+	font-size: 200%;
 	text-align: left;
 	font-weight: 2px;
 	margin: 10px;
 	margin-left: 20px;
 }
-
+header h1{
+	font-family: 'Tapestry', "cursive";
+}
+header h2{
+	font-family: 'Kanit', sans-serif;;
+}
 p {
 	font-style: oblique;
 	text-align: left;
@@ -126,9 +133,12 @@ p {
 }
 
 .carrusel{
-    width: 30%;
-	height: 30%;
-	padding: 10rem;
+	width: 40%;
+	margin: 10px;
+	margin-left: auto;
+	margin-right: auto;
+
+	
 }
 
 /*seccion nosotros*/
@@ -181,7 +191,7 @@ p {
 	flex-direction: column;
 	margin: 1rem;
 	border: 1px solid black;
-	background-color: rgb(255, 200, 81);
+	background-color: rgb(249, 255, 81);
 	align-items: center;
 	justify-content: center;
 }
@@ -219,8 +229,7 @@ table {
 	justify-content: center;
 }
 
-th,
-td {
+th,td {
 	border: solid 1px;
 }
 
