--- a/css/estilos.css
+++ b/css/estilos.css
@@ -8,10 +8,14 @@ html {
 }
 
 .contenedor-headerIndex {
-	height:100%;
-	background-image: linear-gradient(rgba(206, 223, 236, 0.4),rgba(176, 189, 201, 0.4)) , url("../imagenes/img-fondo.png");
+	height: 100%;
+	background-image: linear-gradient(
+			rgba(206, 223, 236, 0.4),
+			rgba(176, 189, 201, 0.4)
+		),
+		url("../imagenes/img-fondo.png");
 	background-repeat: no-repeat;
-	background-position-x: right;
+	background-position: top right;
 }
 
 .contenedor-header {
@@ -20,7 +24,6 @@ html {
 	align-items: center;
 	justify-content: space-between;
 }
-
 
 header {
 	background-color: rgb(202, 202, 0);
@@ -45,43 +48,33 @@ header h2 {
 }
 
 body {
-	background-color:rgb(255, 255, 202);
+	background-color: rgb(248, 248, 168);
+	overflow-x: hidden;
 }
-body{
-	overflow-x:hidden;
-}
+
+
 menu {
 	display: contents;
 }
 
-menu h2{
+menu h2 {
 	text-align: center;
 	margin: 2rem;
 }
-.contenedor-footer{
+.contenedor-footer {
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
-	
-}
-
-/*footer div{
-	flex-direction: row;
-	justify-content: flex-end;
-	align-items: center;
-	padding: 1rem;
-}
-
-footer h2{
-	width:100%;
-	font-size: 20px;
-}*/
-
-
-footer {
 	background-color: rgb(202, 202, 0);
 }
 
+#footer {
+	position: fixed;
+	left: 0px;
+	bottom: 0px;
+	height: 50px;
+	width: 100%;
+}
 
 ul {
 	list-style-type: none;
@@ -92,7 +85,6 @@ ul {
 	justify-content: flex-end;
 	text-decoration: black;
 }
-
 
 li {
 	margin: 0.5rem 1rem;
@@ -114,11 +106,11 @@ h2 {
 	margin: 10px;
 	margin-left: 20px;
 }
-header h1{
-	font-family: 'Tapestry', "cursive";
+header h1 {
+	font-family: "Tapestry", "cursive";
 }
-header h2{
-	font-family: 'Kanit', sans-serif;;
+header h2 {
+	font-family: "Kanit", sans-serif;
 }
 p {
 	font-style: oblique;
@@ -128,11 +120,11 @@ p {
 }
 
 /*seccion inicio*/
-.mapa{
-	padding: 2rem;
+.mapa {
+	padding: 1rem 1rem 0 2rem;
 }
 
-.carrusel{
+.carrusel {
 	width: 40%;
 	margin: 10px;
 	margin-left: auto;
@@ -152,11 +144,12 @@ p {
 	width: 100%;
 }
 
-.notros__parrafo {
+.nosotros__parrafo {
 	font-style: oblique;
 	text-align: justify;
-	font-size: 30px;
+	font-size: 25px;
 	color: rgb(0, 0, 100);
+	margin: 0;
 }
 @media (max-width: 768px) {
 	.div-padre {
@@ -193,7 +186,10 @@ p {
 	align-items: center;
 	justify-content: center;
 }
-
+.gridHijos:hover {
+	margin: 0.5rem;
+	background-color: rgb(189, 194, 64);
+}
 @media (max-width: 768px) {
 	.gridPadre {
 		grid-template-columns: repeat(2, 1fr);
@@ -208,7 +204,6 @@ p {
 }
 /*seccion horarios*/
 
-
 .divHorarios {
 	display: grid;
 	grid-template-columns: repeat(2, 1fr);
@@ -216,8 +211,8 @@ p {
 	padding: 2rem;
 }
 
-.section{
-	display:flex;
+.section {
+	display: flex;
 	flex-direction: column;
 	height: 100%;
 }
@@ -227,7 +222,8 @@ table {
 	justify-content: center;
 }
 
-th,td {
+th,
+td {
 	border: solid 1px;
 }
 
@@ -236,4 +232,3 @@ th,td {
 		grid-template-columns: 1fr;
 	}
 }
-/*seccion contacto*/
