--- a/css/pruebacss.css
+++ b/css/pruebacss.css
@@ -1,37 +1,76 @@
 .header {
-    height: 100%;
-    background-color: #caca00; }
-    .header a {
-        /*logo*/ }
-        .header a img {
-        margin: 1rem 1.5rem;
-        max-width: 12rem; }
-    .header h1 {
-        font-style: oblique;
-        font-size: 250%;
-        text-align: center;
-        font-weight: 2px;
-        margin: 10px; }
-    .header h2 {
-        font-style: oblique;
-        font-size: 150%;
-        text-align: center;
-        margin: 10px;
-        margin-left: 20px; }
-    .header nav {
-        display: flex;
-        justify-content: center; }
-        .header nav ul {
-        list-style-type: none;
-        white-space: unset;
-        display: flex;
-        flex-wrap: wrap;
-        flex-direction: row;
-        justify-content: flex-end;
-        text-decoration: black; }
-        .header nav ul li {
-            margin: 0.5rem 1rem; }
-    .header img {
-        background-image: linear-gradient(rgba(206, 223, 236, 0.4), rgba(176, 189, 201, 0.4)), url("../imagenes/img-fondo.png");
-        background-repeat: no-repeat;
-        background-position: top right; }
+  height: 100%;
+  background-color: #caca00; }
+  .header img {
+    margin: 1rem 1.5rem;
+    max-width: 12rem;
+    /*logo*/ }
+  .header h1 {
+    font-style: oblique;
+    font-size: 250%;
+    text-align: center;
+    font-weight: 2px;
+    margin: 10px; }
+  .header h2 {
+    font-style: oblique;
+    font-size: 150%;
+    text-align: center;
+    margin: 10px;
+    margin-left: 20px; }
+  .header nav {
+    display: flex;
+    justify-content: center; }
+    .header nav ul {
+      list-style-type: none;
+      white-space: unset;
+      display: flex;
+      flex-wrap: wrap;
+      flex-direction: row;
+      justify-content: flex-end;
+      text-decoration: black; }
+      .header nav ul li {
+        margin: 0.5rem 1rem; }
+  .header img {
+    background-image: linear-gradient(rgba(206, 223, 236, 0.4), rgba(176, 189, 201, 0.4)), url("../imagenes/img-fondo.png");
+    background-repeat: no-repeat;
+    background-position: top right; }
+
+menu {
+  display: contents;
+  background-color: #f8f8a8;
+  overflow-x: hidden; }
+  menu .carrusel {
+    width: 40%;
+    margin: 10px;
+    margin-left: auto;
+    margin-right: auto; }
+  menu h2 {
+    text-align: center;
+    margin: 2rem; }
+  menu aside p {
+    font-style: oblique;
+    text-align: left;
+    margin: 10px;
+    margin-left: 20px; }
+  menu .mapa {
+    padding: 1rem 1rem 0 2rem; }
+
+footer {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background-color: #caca00; }
+  footer img {
+    margin: 1rem 1.5rem;
+    max-width: 12rem; }
+  footer h2 {
+    font-style: oblique;
+    font-size: 80%;
+    text-align: center;
+    margin: 10px;
+    margin-left: 20px; }
+  footer p {
+    font-style: oblique;
+    text-align: left;
+    margin: 10px;
+    margin-left: 20px; }
