--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -3,4 +3,26 @@ footer {
 	align-items: center;
 	justify-content: space-between;
 	background-color: rgb(202, 202, 0);
+	
+
+	img{
+		margin: 1rem 1.5rem;
+		max-width: 12rem;
+	}
+    
+	h2{
+		font-style: oblique;
+        font-size: 80%;
+        text-align: center;
+        margin: 10px;
+        margin-left: 20px;
+	}
+
+	p{
+		font-style: oblique;
+		text-align: left;
+		margin: 10px;
+		margin-left: 20px;
+	}
+
 }
