--- a/scss/layout/_main.scss
+++ b/scss/layout/_main.scss
@@ -3,32 +3,31 @@ menu{
     background-color: rgb(248, 248, 168);
 	overflow-x: hidden;
 
+
     .carrusel{
         width: 40%;
 	margin: 10px;
 	margin-left: auto;
 	margin-right: auto;
     }
-	background-color: rgb(248, 248, 168);
-	overflow-x: hidden;
 
     h2 {
         text-align: center;
         margin: 2rem;
     }
 
-    p {
-        font-style: oblique;
-        text-align: left;
-        margin: 10px;
-        margin-left: 20px;
+    aside{
+        p {
+            font-style: oblique;
+            text-align: left;
+            margin: 10px;
+            margin-left: 20px;}
     }
 
     .mapa {
         padding: 1rem 1rem 0 2rem;
     }
 }
-
 
 
 
