--- a/css/pruebacss.css
+++ b/css/pruebacss.css
@@ -1,13 +1,22 @@
 .header {
   height: 100%;
-  background-color: #caca00; }
+  background-color: #caca00;
+  /*img{
+        background-image: linear-gradient(
+			rgba(206, 223, 236, 0.4),
+			rgba(176, 189, 201, 0.4)
+		),
+		url("../imagenes/img-fondo.png");
+        background-repeat: no-repeat;
+        background-position: top right;
+    }*/ }
   .header img {
     margin: 1rem 1.5rem;
     max-width: 12rem;
     /*logo*/ }
   .header h1 {
     font-style: oblique;
-    font-size: 250%;
+    font-size: 6px;
     text-align: center;
     font-weight: 2px;
     margin: 10px; }
@@ -30,10 +39,6 @@
       text-decoration: black; }
       .header nav ul li {
         margin: 0.5rem 1rem; }
-  .header img {
-    background-image: linear-gradient(rgba(206, 223, 236, 0.4), rgba(176, 189, 201, 0.4)), url("../imagenes/img-fondo.png");
-    background-repeat: no-repeat;
-    background-position: top right; }
 
 menu {
   display: contents;
