--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -1,4 +1,5 @@
 @import"layout/_header.scss";
 @import "layout/main.scss";
-@import "layout/_footer.scss"
-
+@import "layout/_footer.scss";
+@import "layout/_horarios.scss";
+@import "base/reset";
