--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -1,5 +1,7 @@
+@import"base/_variables";
 @import"layout/_header.scss";
 @import "layout/main.scss";
 @import "layout/_footer.scss";
+@import"base/comun";
 @import "layout/_horarios.scss";
-@import "base/reset";
+@import "base/_reset.scss";
