--- a/scss/layout/_horarios.scss
+++ b/scss/layout/_horarios.scss
@@ -1,15 +1,19 @@
 /*seccion horarios*/
-$titulo:font-style: 
-{oblique;
-font-size: 12px * 3;
-text-align: center;
-font-weight: 2px;
-margin: 10px;}
+
 
 body{
-    background-color: #f8f8a8;
-    h1{
+    background-color: $colorFondo;
+    
+    @mixin font {
+        font-style: oblique;
+        font-size: 20px * 3;
+        text-align: center;
+        font-weight: 2px;
+        margin: 10px;
         
+    }
+    h1{
+        @include font;
     }
     section {
         display: flex;
@@ -31,6 +35,6 @@ body{
             grid-template-columns: 1fr;
         }
     }
-    
 }
+
 
