--- a/scss/layout/_horarios.scss
+++ b/scss/layout/_horarios.scss
@@ -35,6 +35,11 @@ body{
             grid-template-columns: 1fr;
         }
     }
+    @for $i from 1 through 6 {
+        h#{$i}{
+            font-size: 10px*$i;
+        }
+    }
 }
 
 
