--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -2,6 +2,6 @@
 @import"layout/_header.scss";
 @import "layout/main.scss";
 @import "layout/_footer.scss";
-@import"base/comun";
 @import "layout/_horarios.scss";
 @import "base/_reset.scss";
+@import"layout/_nosotros.scss";
