--- a/css/pruebacss.css
+++ b/css/pruebacss.css
@@ -5,17 +5,13 @@
     margin: 1rem 1.5rem;
     max-width: 12rem;
     /*logo*/ }
-  .header h1 {
-    font-style: oblique;
-    font-size: 6px;
+  .header h1, .header h2, .header body .divHorarios aside p, body .divHorarios aside .header p {
+    font-size: 50px;
     text-align: center;
     font-weight: 2px;
     margin: 10px; }
   .header h2 {
-    font-style: oblique;
-    font-size: 150%;
-    text-align: center;
-    margin: 10px;
+    font-size: 40px;
     margin-left: 20px; }
   .header nav {
     display: flex;
@@ -37,6 +33,7 @@ menu {
   overflow-x: hidden; }
   menu .carrusel {
     width: 40%;
+    height: auto;
     margin: 10px;
     margin-left: auto;
     margin-right: auto; }
@@ -49,7 +46,9 @@ menu {
     margin: 10px;
     margin-left: 20px; }
   menu .mapa {
-    padding: 1rem 1rem 0 2rem; }
+    padding: 1rem 1rem 0 2rem;
+    width: 50rem;
+    height: 15rem; }
 
 footer .contenedor-footer {
   display: flex;
@@ -78,29 +77,61 @@ footer div p {
 /*seccion horarios*/
 body {
   background-color: #f8f8a8; }
-  body h1 {
+  body h1, body .header h2, .header body h2, body .divHorarios aside p {
     font-style: oblique;
-    font-size: 36px;
+    font-size: 30px;
     text-align: center;
     font-weight: 2px;
     margin: 10px; }
-
-section {
-  display: flex;
-  flex-direction: column;
-  height: 100%; }
-  section table {
-    background-color: yellowgreen;
-    text-align: center;
-    justify-content: center; }
-  section th,
-  section td {
-    border: solid 1px; }
-
-@media (max-width: 768px) {
-  .divHorarios {
-    grid-template-columns: 1fr; } }
+  body .divHorarios {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-column-gap: 1rem;
+    padding: 2rem; }
+    body .divHorarios section {
+      display: flex;
+      flex-direction: column;
+      height: 100%; }
+      body .divHorarios section table {
+        background-color: yellowgreen;
+        text-align: center;
+        justify-content: center;
+        margin-top: 3rem; }
+        body .divHorarios section table thead tr {
+          border: solid 2px black; }
+        body .divHorarios section table tr th {
+          border: solid 1px black; }
+    body .divHorarios aside p {
+      text-align: justify;
+      font-size: 16px;
+      margin-top: 3rem; }
+    @media (max-width: 768px) {
+      body .divHorarios .divHorarios {
+        grid-template-columns: 1fr; } }
 
 * {
   margin: 0;
   padding: 0; }
+
+html {
+  font-size: 62, 5%; }
+
+.div-padre {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-column-gap: 1rem;
+  padding: 2rem; }
+  .div-padre img {
+    border-radius: 15px;
+    width: 100%; }
+  .div-padre .nosotros__parrafo {
+    font-style: oblique;
+    text-align: justify;
+    font-size: 25px;
+    color: #000064;
+    margin: 0; }
+  @media (max-width: 768px) {
+    .div-padre .div-padre {
+      grid-template-columns: 1fr; }
+    .div-padre .sobreNos {
+      margin-bottom: 1rem; } }
