--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -1,6 +1,6 @@
-@import"base/_variables";
+@import"base/_variable";
 @import"layout/_header.scss";
-@import "layout/main.scss";
+@import "layout/_main.scss";
 @import "layout/_footer.scss";
 @import "layout/_horarios.scss";
 @import "base/_reset.scss";
