--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -7,18 +7,15 @@
     /*logo*/
     } 
     h1{
-        font-style: oblique;
-        font-size: 2px * 3;
+        font-size: 50px;
         text-align: center;
         font-weight: 2px;
         margin: 10px;
     }
 
     h2{
-        font-style: oblique;
-        font-size: 150%;
-        text-align: center;
-        margin: 10px;
+        @extend h1 ;
+        font-size: 40px;
         margin-left: 20px;
     }
 
