--- a/scss/layout/_horarios.scss
+++ b/scss/layout/_horarios.scss
@@ -1,43 +1,59 @@
 /*seccion horarios*/
-
+// mapa y map-get
+$estilos:(
+    color:rgb(248, 248, 168),
+    fuente:30px,
+    center:center,
+);
 
 body{
-    background-color: $colorFondo;
-    
-    @mixin font {
+    background-color:map-get($estilos , color);
+    h1{
         font-style: oblique;
-        font-size: 20px * 3;
-        text-align: center;
+        font-size: map-get($estilos , fuente);
+        text-align: map-get($estilos , center);
         font-weight: 2px;
         margin: 10px;
-        
     }
-    h1{
-        @include font;
-    }
-    section {
-        display: flex;
-        flex-direction: column;
-        height: 100%;
-        table {
-            background-color: yellowgreen;
-            text-align: center;
-            justify-content: center;
+    .divHorarios {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-column-gap: 1rem;
+        padding: 2rem;
+        section {
+            display: flex;
+            flex-direction: column;
+            height: 100%;
+            table {
+                background-color: yellowgreen;
+                text-align: center;
+                justify-content: center;
+                margin-top: 3rem;
+                thead{
+                    tr{
+                        border: solid 2px black;
+                    }
+                }
+                tr{
+                    th {
+                        border: solid 1px black;
+                    }
+                }
+            }
+            
         }
-        
-        th,
-        td {
-            border: solid 1px;
+        aside{
+            p{
+                @extend h1 ;
+                text-align: justify;
+                font-size: 16px;
+                margin-top:3rem;
+            }
         }
-    }
-    @media (max-width: 768px) {
-        .divHorarios {
-            grid-template-columns: 1fr;
-        }
-    }
-    @for $i from 1 through 6 {
-        h#{$i}{
-            font-size: 10px*$i;
+        @media (max-width: 768px) {
+            .divHorarios {
+                grid-template-columns: 1fr;
+            }
         }
     }
 }
