--- a/scss/layout/_main.scss
+++ b/scss/layout/_main.scss
@@ -1,14 +1,18 @@
+@mixin formato ($alto,$ancho){
+    width: $ancho;
+    height: $alto;
+}
+
 menu{
     display: contents;
     background-color: rgb(248, 248, 168);
 	overflow-x: hidden;
 
-
     .carrusel{
-        width: 40%;
-	margin: 10px;
-	margin-left: auto;
-	margin-right: auto;
+        @include formato(auto, 40%);
+        margin: 10px;
+        margin-left: auto;
+        margin-right: auto;
     }
 
     h2 {
@@ -26,6 +30,7 @@ menu{
 
     .mapa {
         padding: 1rem 1rem 0 2rem;
+        @include formato(15rem,50rem )
     }
 }
 
