--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -1,4 +1,4 @@
-.header{
+header{
         height: 100%;
         background-color:rgb(202, 202, 0);
     img{
@@ -36,6 +36,7 @@
             }
         }
     }
+
 }
 
 
