--- a/css/pruebacss.css
+++ b/css/pruebacss.css
@@ -1,22 +1,22 @@
-.header {
+header {
   height: 100%;
   background-color: #caca00; }
-  .header img {
+  header img {
     margin: 1rem 1.5rem;
     max-width: 12rem;
     /*logo*/ }
-  .header h1, .header h2, .header body .divHorarios aside p, body .divHorarios aside .header p {
+  header h1, header h2, header body .divHorarios aside p, body .divHorarios aside header p {
     font-size: 50px;
     text-align: center;
     font-weight: 2px;
     margin: 10px; }
-  .header h2 {
+  header h2 {
     font-size: 40px;
     margin-left: 20px; }
-  .header nav {
+  header nav {
     display: flex;
     justify-content: center; }
-    .header nav ul {
+    header nav ul {
       list-style-type: none;
       white-space: unset;
       display: flex;
@@ -24,7 +24,7 @@
       flex-direction: row;
       justify-content: flex-end;
       text-decoration: black; }
-      .header nav ul li {
+      header nav ul li {
         margin: 0.5rem 1rem; }
 
 menu {
@@ -43,7 +43,7 @@ menu {
   menu .mapa {
     padding: 1rem 0rem 0 2rem;
     width: 100%;
-    height: 20rem; }
+    height: 30rem; }
 
 footer .contenedor-footer {
   display: flex;
@@ -72,7 +72,7 @@ footer div p {
 /*seccion horarios*/
 body {
   background-color: #f8f8a8; }
-  body h1, body .header h2, .header body h2, body .divHorarios aside p {
+  body h1, body header h2, header body h2, body .divHorarios aside p {
     font-style: oblique;
     font-size: 30px;
     text-align: center;
@@ -100,9 +100,9 @@ body {
       text-align: justify;
       font-size: 16px;
       margin-top: 3rem; }
-    @media (max-width: 768px) {
-      body .divHorarios .divHorarios {
-        grid-template-columns: 1fr; } }
+  @media (max-width: 768px) {
+    body .divHorarios {
+      grid-template-columns: 1fr; } }
 
 * {
   margin: 0;
@@ -111,22 +111,55 @@ body {
 html {
   font-size: 62, 5%; }
 
-.div-padre {
+body .div-padre {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   grid-column-gap: 1rem;
   padding: 2rem; }
-  .div-padre img {
+  body .div-padre img {
     border-radius: 15px;
     width: 100%; }
-  .div-padre .nosotros__parrafo {
+  body .div-padre .nosotros__parrafo {
     font-style: oblique;
     text-align: justify;
     font-size: 25px;
     color: #000064;
     margin: 0; }
-  @media (max-width: 768px) {
-    .div-padre .div-padre {
-      grid-template-columns: 1fr; }
-    .div-padre .sobreNos {
-      margin-bottom: 1rem; } }
+
+@media (max-width: 768px) {
+  body .div-padre {
+    grid-template-columns: 1fr; }
+  body .sobreNos {
+    margin-bottom: 1rem; } }
+
+/*seccion insumos con grid*/
+body .gridPadre {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(3, 1fr);
+  grid-column-gap: 10px;
+  grid-row-gap: 10px; }
+  body .gridPadre .gridHijos {
+    display: flex;
+    flex-direction: column;
+    margin: 1rem;
+    border: 1px solid black;
+    background-color: #f9ff51;
+    align-items: center;
+    justify-content: center; }
+    body .gridPadre .gridHijos .imagenChica {
+      width: 30%;
+      height: 30%; }
+    body .gridPadre .gridHijos .gridHijos:hover {
+      margin: 0.5rem;
+      background-color: #bdc240; }
+
+@media (max-width: 768px) {
+  body .gridPadre {
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(5, 1fr); } }
+
+@media (max-width: 380px) {
+  body .gridPadre {
+    grid-template-columns: repeat(1, 1fr);
+    grid-template-rows: repeat(9, 1fr); } }
