--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -1,7 +1,8 @@
 @import"base/_variable";
 @import"layout/_header.scss";
-@import "layout/_main.scss";
+@import "layout/_index.scss";
 @import "layout/_footer.scss";
 @import "layout/_horarios.scss";
 @import "base/_reset.scss";
 @import"layout/_nosotros.scss";
+@import"layout/_insumos.scss"
