--- a/scss/layout/_insumos.scss
+++ b/scss/layout/_insumos.scss
@@ -1,48 +1,39 @@
-/*seccion insumos*/
-
-.imagenChica {
-	width: 30%;
-	height: 30%;
-}
-
 /*seccion insumos con grid*/
-section{
-    .gridPadre {
-        display: grid;
-        grid-template-columns: repeat(3, 1fr);
-        grid-template-rows: repeat(3, 1fr);
-        grid-column-gap: 10px;
-        grid-row-gap: 10px;
-    }
-    div{
-        .gridHijos {
-            display: flex;
-            flex-direction: column;
-            margin: 1rem;
-            border: 1px solid black;
-            background-color: rgb(249, 255, 81);
-            align-items: center;
-            justify-content: center;
+body{
+    .gridPadre{
+            display: grid;
+            grid-template-columns: repeat(3, 1fr);
+            grid-template-rows: repeat(3, 1fr);
+            grid-column-gap: 10px;
+            grid-row-gap: 10px;
+                .gridHijos{
+                    display: flex;
+                    flex-direction: column;
+                    margin: 1rem;
+                    border: 1px solid black;
+                    background-color: rgb(249, 255, 81);
+                    align-items: center;
+                    justify-content: center;
+                    .imagenChica {
+                        width: 30%;
+                        height: 30%;
+                    }
+                    .gridHijos:hover {
+                        margin: 0.5rem;
+                        background-color: rgb(189, 194, 64);
+                    }
+                }
+            }
+        @media (max-width: 768px) {
+            .gridPadre {
+                grid-template-columns: repeat(2, 1fr);
+                grid-template-rows: repeat(5, 1fr);
+            }
         }
-        .gridHijos:hover {
-            margin: 0.5rem;
-            background-color: rgb(189, 194, 64);
+        @media (max-width: 380px) {
+            .gridPadre {
+                grid-template-columns: repeat(1, 1fr);
+                grid-template-rows: repeat(9, 1fr);
+            }
         }
-    }
-    @media (max-width: 768px) {
-        .gridPadre {
-            grid-template-columns: repeat(2, 1fr);
-            grid-template-rows: repeat(5, 1fr);
-        }
-    }
-    @media (max-width: 380px) {
-        .gridPadre {
-            grid-template-columns: repeat(1, 1fr);
-            grid-template-rows: repeat(9, 1fr);
-        }
-    }
-
 }
-
-
-/*seccion horarios*/
