--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,4 +1,4 @@
-* {
+/* * {
 	margin: 0;
 	padding: 0;
 }
@@ -119,7 +119,7 @@ p {
 	margin-left: 20px;
 }
 
-/*seccion inicio*/
+/*seccion inicio
 .mapa {
 	padding: 1rem 1rem 0 2rem;
 }
@@ -129,9 +129,9 @@ p {
 	margin: 10px;
 	margin-left: auto;
 	margin-right: auto;
-}
+}*/
 
-/*seccion nosotros*/
+/*seccion nosotros
 .div-padre {
 	display: grid;
 	grid-template-columns: repeat(2, 1fr);
@@ -160,14 +160,14 @@ p {
 	}
 }
 
-/*seccion insumos*/
+/*seccion insumos
 
 .imagenChica {
 	width: 30%;
 	height: 30%;
 }
 
-/*seccion insumos con grid*/
+/*seccion insumos con grid
 
 .gridPadre {
 	display: grid;
@@ -202,7 +202,7 @@ p {
 		grid-template-rows: repeat(9, 1fr);
 	}
 }
-/*seccion horarios*/
+/*seccion horarios
 
 .divHorarios {
 	display: grid;
@@ -231,4 +231,4 @@ td {
 	.divHorarios {
 		grid-template-columns: 1fr;
 	}
-}
+} */
