--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -5,4 +5,5 @@
 @import "layout/_horarios.scss";
 @import "base/_reset.scss";
 @import"layout/_nosotros.scss";
-@import"layout/_insumos.scss"
+@import"layout/_insumos.scss";
+@import"layout/_contacto.scss";
