--- a/css/pruebacss.css
+++ b/css/pruebacss.css
@@ -163,3 +163,11 @@ body .gridPadre {
   body .gridPadre {
     grid-template-columns: repeat(1, 1fr);
     grid-template-rows: repeat(9, 1fr); } }
+
+form {
+  border: solid 1px;
+  margin: 1rem;
+  padding: 1rem;
+  margin-left: 0;
+  width: 460 px;
+  height: 580 px; }
