--- a/css/pruebacss.css
+++ b/css/pruebacss.css
@@ -1,31 +1,62 @@
 header {
-  height: 100%;
-  background-color: #caca00; }
-  header img {
-    margin: 1rem 1.5rem;
-    max-width: 12rem;
-    /*logo*/ }
-  header h1, header h2, header body .divHorarios aside p, body .divHorarios aside header p {
-    font-size: 50px;
-    text-align: center;
-    font-weight: 2px;
-    margin: 10px; }
-  header h2 {
-    font-size: 40px;
-    margin-left: 20px; }
-  header nav {
-    display: flex;
-    justify-content: center; }
-    header nav ul {
-      list-style-type: none;
-      white-space: unset;
+  background-color: #caca00;
+  height: 100px;
+  width: 100%; }
+  header div {
+    display: flex; }
+    header div img {
+      /*logo*/
+      margin: 1rem 1.5rem;
+      max-width: 120px;
+      line-height: 80px; }
+    header div nav {
       display: flex;
-      flex-wrap: wrap;
-      flex-direction: row;
-      justify-content: flex-end;
-      text-decoration: black; }
-      header nav ul li {
-        margin: 0.5rem 1rem; }
+      justify-content: end;
+      align-items: center;
+      padding-right: 5rem;
+      width: 100%; }
+      header div nav .checkbtn {
+        float: right;
+        line-height: 80px;
+        margin-right: 40px;
+        display: none; }
+      header div nav #check {
+        display: none; }
+      header div nav ul {
+        display: flex;
+        width: 50%;
+        padding-top: 1rem;
+        list-style-type: none;
+        text-decoration: black; }
+        header div nav ul :hover {
+          background-color: #8a8b3c;
+          padding: 2px; }
+        header div nav ul li {
+          margin: 0.5rem 1rem; }
+          header div nav ul li a {
+            text-decoration: none;
+            color: black; }
+
+@media (max-width: 380px) {
+  .checkbtn {
+    display: block; }
+  ul {
+    position: fixed;
+    width: 100%;
+    height: 100vh;
+    background: #2c3e50;
+    top: 80px;
+    left: -100%;
+    text-align: center;
+    transition: all .5s; }
+  nav #check:checked ~ ul {
+    left: 0; }
+  nav ul li {
+    display: block;
+    margin: 50px 0;
+    line-height: 30px; }
+    nav ul li a {
+      font-size: 20px; } }
 
 menu {
   display: contents;
@@ -37,42 +68,49 @@ menu {
     margin: 10px;
     margin-left: auto;
     margin-right: auto; }
-  menu h2 {
+  menu h1, menu h2, menu body .divHorarios aside p, body .divHorarios aside menu p {
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 50px;
     text-align: center;
-    margin: 2rem; }
+    font-weight: 2px;
+    margin: 10px; }
+  menu h2 {
+    font-size: 40px;
+    margin-left: 20px; }
   menu .mapa {
     padding: 1rem 0rem 0 2rem;
     width: 100%;
     height: 30rem; }
 
-footer .contenedor-footer {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
+footer {
+  height: 80px;
+  width: 100%;
   background-color: #caca00; }
-
-footer div img {
-  margin: 1rem 1.5rem;
-  max-width: 12rem; }
-
-footer div h2 {
-  font-style: oblique;
-  font-size: 80%;
-  text-align: center;
-  margin: 10px;
-  margin-left: 20px; }
-
-footer div p {
-  font-style: oblique;
-  text-align: left;
-  margin: 10px;
-  margin-left: 20px;
-  font-size: 80%; }
+  footer .contenedor-footer {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background-color: #caca00; }
+  footer div img {
+    margin: 1rem 1.5rem;
+    max-width: 80px; }
+  footer div h2 {
+    font-style: oblique;
+    font-size: 80%;
+    text-align: center;
+    margin: 10px;
+    margin-left: 20px; }
+  footer div p {
+    font-style: oblique;
+    text-align: left;
+    margin: 10px;
+    margin-left: 20px;
+    font-size: 80%; }
 
 /*seccion horarios*/
 body {
   background-color: #f8f8a8; }
-  body h1, body header h2, header body h2, body .divHorarios aside p {
+  body h1, body menu h2, menu body h2, body .divHorarios aside p {
     font-style: oblique;
     font-size: 30px;
     text-align: center;
@@ -88,7 +126,7 @@ body {
       flex-direction: column;
       height: 100%; }
       body .divHorarios section table {
-        background-color: yellowgreen;
+        background-color: #d5ff80;
         text-align: center;
         justify-content: center;
         margin-top: 3rem; }
@@ -109,7 +147,7 @@ body {
   padding: 0; }
 
 html {
-  font-size: 62, 5%; }
+  font-size: 62,5%; }
 
 body .div-padre {
   display: grid;
@@ -124,7 +162,7 @@ body .div-padre {
     text-align: justify;
     font-size: 25px;
     color: #000064;
-    margin: 0; }
+    margin: auto; }
 
 @media (max-width: 768px) {
   body .div-padre {
@@ -168,6 +206,6 @@ form {
   border: solid 1px;
   margin: 1rem;
   padding: 1rem;
-  margin-left: 0;
+  margin-left: 2rem;
   width: 460 px;
   height: 580 px; }
