--- a/scss/layout/_contacto.scss
+++ b/scss/layout/_contacto.scss
@@ -2,7 +2,7 @@ form{
     border: solid 1px;
     margin: 1rem;
     padding: 1rem;
-    margin-left:0 ;
+    margin-left:2rem ;
     width: 460 px;
     height: 580 px;
 
