--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -1,43 +1,83 @@
 header{
-        height: 100%;
-        background-color:rgb(202, 202, 0);
-    img{
-    margin: 1rem 1.5rem;
-    max-width: 12rem;
-    /*logo*/
-    } 
-    h1{
-        font-size: 50px;
-        text-align: center;
-        font-weight: 2px;
-        margin: 10px;
-    }
-
-    h2{
-        @extend h1 ;
-        font-size: 40px;
-        margin-left: 20px;
-    }
-
-    nav{
+    background-color:rgb(202, 202, 0);
+    height: 100px;
+    width: 100%;   
+    div{
         display: flex;
-        justify-content: center;
-
-        ul{
-            list-style-type: none;
-            white-space: unset;
+        img{/*logo*/
+            margin: 1rem 1.5rem;
+            max-width: 120px;
+            line-height: 80px;
+        }
+        nav{
             display: flex;
-            flex-wrap: wrap;
-            flex-direction: row;
-            justify-content: flex-end;
-            text-decoration: black;
-            li{
+            justify-content: end;
+            align-items: center;
+            padding-right: 5rem;
+            width: 100%;
+            .checkbtn{
+                float: right;
+                line-height: 80px;
+                margin-right: 40px;
+                display: none;
+            }
+            #check{
+                display: none;
+            }
+            ul{
+                display: flex;
+                width: 50%;
+                padding-top: 1rem;
+                list-style-type: none;
+                text-decoration: black;
+                :hover{
+                    background-color: #8a8b3c;
+                    padding:2px;
+                }
+                li{
                     margin: 0.5rem 1rem;
+                    a{
+                        text-decoration: none;
+                        color: black;
+                    }
+                }
             }
         }
     }
-
 }
+@media (max-width: 380px){
+    .checkbtn{
+        display: block;
+    }
+    ul{
+        position: fixed;
+        width: 100%;
+        height: 100vh;
+        background: #2c3e50;
+        top: 80px;
+        left: -100%;
+        text-align: center;
+        transition: all .5s;
+    }
+    nav {
+        #check:checked ~ ul{
+            left:0;
+        }
+        ul{
+            li{
+                display: block;
+                margin: 50px 0;
+                line-height: 30px;
+                a{
+                    font-size: 20px;
+                }
+            }
+        } 
+    }
+    
+}
+
+
 
 
 
