--- a/scss/layout/_horarios.scss
+++ b/scss/layout/_horarios.scss
@@ -25,7 +25,7 @@ body{
             flex-direction: column;
             height: 100%;
             table {
-                background-color: yellowgreen;
+                background-color: rgb(213, 255, 128);
                 text-align: center;
                 justify-content: center;
                 margin-top: 3rem;
