--- a/scss/layout/_nosotros.scss
+++ b/scss/layout/_nosotros.scss
@@ -13,7 +13,7 @@ body{
             text-align: justify;
             font-size: 25px;
             color: rgb(0, 0, 100);
-            margin: 0;
+            margin: auto;
         }
     }
     @media (max-width: 768px) {
