--- a/scss/layout/_index.scss
+++ b/scss/layout/_index.scss
@@ -31,7 +31,7 @@ menu{
     }
 
     .mapa {
-        padding: 1rem 0rem 0 2rem;
+        width: auto;
         @include formato(30rem,100% )
     }
     
