--- a/css/pruebacss.css
+++ b/css/pruebacss.css
@@ -78,7 +78,7 @@ menu {
     font-size: 40px;
     margin-left: 20px; }
   menu .mapa {
-    padding: 1rem 0rem 0 2rem;
+    width: auto;
     width: 100%;
     height: 30rem; }
 
@@ -114,30 +114,32 @@ body {
     font-style: oblique;
     font-size: 30px;
     text-align: center;
-    font-weight: 2px;
-    margin: 10px; }
+    font-weight: 2px; }
   body .divHorarios {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-column-gap: 1rem;
-    padding: 2rem; }
+    padding: 2rem;
+    margin: 60px; }
     body .divHorarios section {
       display: flex;
       flex-direction: column;
-      height: 100%; }
+      height: 100%;
+      width: auto; }
       body .divHorarios section table {
         background-color: #d5ff80;
         text-align: center;
         justify-content: center;
         margin-top: 3rem; }
         body .divHorarios section table thead tr {
-          border: solid 2px black; }
+          border: solid 1px black; }
         body .divHorarios section table tr th {
           border: solid 1px black; }
     body .divHorarios aside p {
       text-align: justify;
-      font-size: 16px;
-      margin-top: 3rem; }
+      font-size: 20px;
+      margin-top: 3rem;
+      width: auto; }
   @media (max-width: 768px) {
     body .divHorarios {
       grid-template-columns: 1fr; } }
