--- a/scss/layout/_horarios.scss
+++ b/scss/layout/_horarios.scss
@@ -13,17 +13,19 @@ body{
         font-size: map-get($estilos , fuente);
         text-align: map-get($estilos , center);
         font-weight: 2px;
-        margin: 10px;
+        
     }
     .divHorarios {
         display: grid;
         grid-template-columns: repeat(2, 1fr);
         grid-column-gap: 1rem;
         padding: 2rem;
+        margin: 60px;
         section {
             display: flex;
             flex-direction: column;
             height: 100%;
+            width: auto;
             table {
                 background-color: rgb(213, 255, 128);
                 text-align: center;
@@ -31,7 +33,7 @@ body{
                 margin-top: 3rem;
                 thead{
                     tr{
-                        border: solid 2px black;
+                        border: solid 1px black;
                     }
                 }
                 tr{
@@ -46,8 +48,9 @@ body{
             p{
                 @extend h1 ;
                 text-align: justify;
-                font-size: 16px;
+                font-size: 20px;
                 margin-top:3rem;
+                width: auto;
             }
         }
     }
