--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -14,7 +14,7 @@ footer {
 		max-width: 80px;
 		}
 		h2{
-		font-style: oblique;
+		font-family: lucida;
         font-size: 80%;
         text-align: center;
         margin: 10px;
