--- a/css/pruebacss.css
+++ b/css/pruebacss.css
@@ -10,18 +10,15 @@ header {
       max-width: 120px;
       line-height: 80px; }
     header div nav {
+      background-color: #caca00;
       display: flex;
       justify-content: end;
       align-items: center;
       padding-right: 5rem;
       width: 100%; }
-      header div nav .checkbtn {
-        float: right;
-        line-height: 80px;
-        margin-right: 40px;
-        display: none; }
-      header div nav #check {
-        display: none; }
+      header div nav .prueba {
+        display: flex !important;
+        flex-flow: wrap !important; }
       header div nav ul {
         display: flex;
         width: 50%;
@@ -36,27 +33,6 @@ header {
           header div nav ul li a {
             text-decoration: none;
             color: black; }
-
-@media (max-width: 380px) {
-  .checkbtn {
-    display: block; }
-  ul {
-    position: fixed;
-    width: 100%;
-    height: 100vh;
-    background: #2c3e50;
-    top: 80px;
-    left: -100%;
-    text-align: center;
-    transition: all .5s; }
-  nav #check:checked ~ ul {
-    left: 0; }
-  nav ul li {
-    display: block;
-    margin: 50px 0;
-    line-height: 30px; }
-    nav ul li a {
-      font-size: 20px; } }
 
 menu {
   display: contents;
