--- a/css/pruebacss.css
+++ b/css/pruebacss.css
@@ -3,7 +3,9 @@ header {
   height: 100px;
   width: 100%; }
   header div {
-    display: flex; }
+    background-color: #caca00;
+    display: flex;
+    padding: 0; }
     header div img {
       /*logo*/
       margin: 1rem 1.5rem;
@@ -12,25 +14,23 @@ header {
     header div nav {
       background-color: #caca00;
       display: flex;
-      justify-content: end;
+      justify-content: space-between;
       align-items: center;
-      padding-right: 5rem;
-      width: 100%; }
-      header div nav .prueba {
-        display: flex !important;
-        flex-flow: wrap !important; }
-      header div nav ul {
+      width: 70%;
+      height: 100%;
+      padding: 0; }
+      header div nav div ul {
         display: flex;
         width: 50%;
         padding-top: 1rem;
         list-style-type: none;
         text-decoration: black; }
-        header div nav ul :hover {
+        header div nav div ul :hover {
           background-color: #8a8b3c;
           padding: 2px; }
-        header div nav ul li {
+        header div nav div ul li {
           margin: 0.5rem 1rem; }
-          header div nav ul li a {
+          header div nav div ul li a {
             text-decoration: none;
             color: black; }
 
@@ -122,7 +122,8 @@ body {
 
 * {
   margin: 0;
-  padding: 0; }
+  padding: 0;
+  overflow-x: none; }
 
 html {
   font-size: 62,5%; }
