--- a/css/pruebacss.css
+++ b/css/pruebacss.css
@@ -1,43 +1,35 @@
-header {
+header div img {
+  /*logo*/
+  margin: 1rem 1.5rem;
+  max-width: 120px;
+  line-height: 80px; }
+
+header div nav {
   background-color: #caca00;
-  height: 100px;
-  width: 100%; }
-  header div {
-    background-color: #caca00;
+  display: flex;
+  justify-content: end;
+  align-items: center;
+  height: 100%;
+  width: 100%;
+  padding: 2rem; }
+  header div nav div ul {
     display: flex;
-    padding: 0; }
-    header div img {
-      /*logo*/
-      margin: 1rem 1.5rem;
-      max-width: 120px;
-      line-height: 80px; }
-    header div nav {
-      background-color: #caca00;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      width: 70%;
-      height: 100%;
-      padding: 0; }
-      header div nav div ul {
-        display: flex;
-        width: 50%;
-        padding-top: 1rem;
-        list-style-type: none;
-        text-decoration: black; }
-        header div nav div ul :hover {
-          background-color: #8a8b3c;
-          padding: 2px; }
-        header div nav div ul li {
-          margin: 0.5rem 1rem; }
-          header div nav div ul li a {
-            text-decoration: none;
-            color: black; }
+    width: 50%;
+    padding-top: 1rem;
+    list-style-type: none;
+    text-decoration: black; }
+    header div nav div ul :hover {
+      background-color: #8a8b3c;
+      margin: 2px; }
+    header div nav div ul li {
+      margin: 0.5rem 1rem; }
+      header div nav div ul li a {
+        text-decoration: none;
+        color: black; }
 
 menu {
   display: contents;
-  background-color: #f8f8a8;
-  overflow-x: hidden; }
+  background-color: #f8f8a8; }
   menu .carrusel {
     width: 40%;
     height: auto;
@@ -56,7 +48,7 @@ menu {
   menu .mapa {
     width: auto;
     width: 100%;
-    height: 30rem; }
+    height: 20rem; }
 
 footer {
   height: 80px;
@@ -123,7 +115,7 @@ body {
 * {
   margin: 0;
   padding: 0;
-  overflow-x: none; }
+  box-sizing: border-box; }
 
 html {
   font-size: 62,5%; }
@@ -185,6 +177,6 @@ form {
   border: solid 1px;
   margin: 1rem;
   padding: 1rem;
-  margin-left: 2rem;
+  margin: auto;
   width: 460 px;
   height: 580 px; }
