--- a/scss/layout/_nosotros.scss
+++ b/scss/layout/_nosotros.scss
@@ -1,4 +1,7 @@
 body{
+    h1{
+        font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    }
     .div-padre {
         display: grid;
         grid-template-columns: repeat(2, 1fr);
