--- a/css/pruebacss.css
+++ b/css/pruebacss.css
@@ -1,29 +1,27 @@
-header div img {
-  /*logo*/
-  margin: 1rem 1.5rem;
-  max-width: 120px;
-  line-height: 80px; }
-
 header div nav {
   background-color: #caca00;
   display: flex;
-  justify-content: end;
   align-items: center;
   height: 100%;
-  width: 100%;
-  padding: 2rem; }
-  header div nav div ul {
+  width: 100%; }
+  header div nav div img {
+    /*logo*/
+    margin: 0 2rem;
+    max-width: 120px;
+    line-height: 80px; }
+  header div nav div div ul {
     display: flex;
     width: 50%;
-    padding-top: 1rem;
+    margin: auto;
     list-style-type: none;
     text-decoration: black; }
-    header div nav div ul :hover {
-      background-color: #8a8b3c;
-      margin: 2px; }
-    header div nav div ul li {
+    header div nav div div ul :hover {
+      background-color: #afb151;
+      width: auto;
+      text-decoration: underline; }
+    header div nav div div ul li {
       margin: 0.5rem 1rem; }
-      header div nav div ul li a {
+      header div nav div div ul li a {
         text-decoration: none;
         color: black; }
 
@@ -50,35 +48,33 @@ menu {
     width: 100%;
     height: 20rem; }
 
-footer {
+footer .contenedor-footer {
+  display: flex;
   height: 80px;
   width: 100%;
+  align-items: center;
+  justify-content: space-between;
   background-color: #caca00; }
-  footer .contenedor-footer {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    background-color: #caca00; }
-  footer div img {
-    margin: 1rem 1.5rem;
+  footer .contenedor-footer div img {
+    margin: 0 2rem;
     max-width: 80px; }
-  footer div h2 {
-    font-family: lucida;
-    font-size: 80%;
-    text-align: center;
-    margin: 10px;
-    margin-left: 20px; }
-  footer div p {
+  footer .contenedor-footer div p {
     font-style: oblique;
-    text-align: left;
-    margin: 10px;
-    margin-left: 20px;
-    font-size: 80%; }
+    margin: auto;
+    font-size: 80%;
+    width: auto; }
+  footer .contenedor-footer .div {
+    display: flex;
+    height: 80px;
+    width: 50%;
+    align-items: center;
+    justify-content: end; }
 
 /*seccion horarios*/
 body {
   background-color: #f8f8a8; }
   body h1, body menu h2, menu body h2, body .divHorarios aside p {
+    margin: 10px;
     font-style: oblique;
     font-size: 30px;
     text-align: center;
@@ -88,7 +84,7 @@ body {
     grid-template-columns: repeat(2, 1fr);
     grid-column-gap: 1rem;
     padding: 2rem;
-    margin: 60px; }
+    margin: 50px; }
     body .divHorarios section {
       display: flex;
       flex-direction: column;
@@ -98,7 +94,8 @@ body {
         background-color: #d5ff80;
         text-align: center;
         justify-content: center;
-        margin-top: 3rem; }
+        margin-top: 40px;
+        margin-bottom: 40px; }
         body .divHorarios section table thead tr {
           border: solid 1px black; }
         body .divHorarios section table tr th {
@@ -119,6 +116,9 @@ body {
 
 html {
   font-size: 62,5%; }
+
+body h1, body menu h2, menu body h2, body .divHorarios aside p {
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif; }
 
 body .div-padre {
   display: grid;
@@ -142,6 +142,9 @@ body .div-padre {
     margin-bottom: 1rem; } }
 
 /*seccion insumos con grid*/
+body h1, body menu h2, menu body h2, body .divHorarios aside p {
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif; }
+
 body .gridPadre {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
