--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -1,32 +1,31 @@
 footer {
-	height: 80px;
-	width: 100%;
-	background-color:rgb(202, 202, 0);
 	.contenedor-footer {
 		display: flex;
+		height: 80px;
+		width: 100%;
 		align-items: center;
 		justify-content: space-between;
 		background-color: rgb(202, 202, 0);
-	}
-	div{
-		img{
-		margin: 1rem 1.5rem;
-		max-width: 80px;
+		div{
+			img{
+			margin:0 2rem;
+			max-width: 80px;
+			}
+			p{
+				font-style: oblique;
+				margin: auto;
+				font-size: 80%;
+				width: auto;
+			}
 		}
-		h2{
-		font-family: lucida;
-        font-size: 80%;
-        text-align: center;
-        margin: 10px;
-        margin-left: 20px;
-		}
-
-		p{
-			font-style: oblique;
-			text-align: left;
-			margin: 10px;
-			margin-left: 20px;
-			font-size: 80%;
+		
+		.div{
+			display: flex;
+			height: 80px;
+			width: 50%;
+			align-items: center;
+			justify-content: end;
+			
 		}
 	}
 }
