--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -1,35 +1,36 @@
 header {
 	div {
-		img {
-			/*logo*/
-			margin: 1rem 1.5rem;
-			max-width: 120px;
-			line-height: 80px;
-		}
 		nav {
 			background-color: rgb(202, 202, 0);
 			display: flex;
-			justify-content: end;
 			align-items: center;
 			height: 100%;
             width: 100%;
-			padding: 2rem;
-			div {
-				ul {
-					display: flex;
-					width: 50%;
-					padding-top: 1rem;
-					list-style-type: none;
-					text-decoration: black;
-					:hover {
-						background-color: #8a8b3c;
-						margin: 2px;
-					}
-					li {
-						margin: 0.5rem 1rem;
-						a {
-							text-decoration: none;
-							color: black;
+			div{
+				img {
+					/*logo*/
+					margin: 0 2rem;
+					max-width: 120px;
+					line-height: 80px;
+				}
+				div {
+					ul {
+						display: flex;
+						width: 50%;
+						margin: auto;
+						list-style-type: none;
+						text-decoration: black;
+						:hover {
+							background-color: #afb151;
+							width: auto;
+							text-decoration:underline;
+						}
+						li {
+							margin: 0.5rem 1rem;
+							a {
+								text-decoration: none;
+								color: black;
+							}
 						}
 					}
 				}
@@ -37,88 +38,3 @@ header {
 		}
 	}
 }
-// header{
-//     background-color:rgb(202, 202, 0);
-//     height: 100px;
-//        
-//     div{
-//         background-color:rgb(202, 202, 0);
-//         display: flex;
-//         padding: 0;
-//         img{/*logo*/
-//             margin: 1rem 1.5rem;
-//             max-width: 120px;
-//             line-height: 80px;
-//         }
-//         nav{
-//             background-color: rgb(202, 202, 0);
-//             display: flex;
-//             justify-content:space-between;
-//             align-items: center;
-//             width: 70%;
-//             height: 100%;
-//             padding: 2rem;
-//             div{
-//                 ul{
-//                     display: flex;
-//                     width: 50%;
-//                     padding-top: 1rem;
-//                     list-style-type: none;
-//                     text-decoration: black;
-//                     :hover{
-//                         background-color: #8a8b3c;
-//                         padding:0;
-//                         transition: 0,5s;
-//                         width: auto;
-//                     }
-//                     li{
-//                         margin: 0.5rem 1rem;
-//                         a{
-//                             text-decoration: none;
-//                             color: black;
-//                         }
-//                     }
-//                 }
-//             }
-
-//         }
-//     }
-// }
-// @media (max-width: 380px){
-//     .checkbtn{
-//         display: block;
-//     }
-//     ul{
-//         position: fixed;
-//         width: 100%;
-//         height: 100vh;
-//         background: #2c3e50;
-//         top: 80px;
-//         left: -100%;
-//         text-align: center;
-//         transition: all .5s;
-//     }
-//     nav {
-//         #check:checked ~ ul{
-//             left:0;
-//         }
-//         ul{
-//             li{
-//                 display: block;
-//                 margin: 50px 0;
-//                 line-height: 30px;
-//                 a{
-//                     font-size: 20px;
-//                 }
-//             }
-//         } 
-//     }
-    
-// }
-
-
-
-
-
-
-
